Closed Bug 1619006 Opened 5 years ago Closed 5 years ago

Gradient crashes on debug builds when scrolling it out of view

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: ntim, Assigned: ntim)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Crash trace:

Assertion failure: [GFX1 42]: Invalid constrained value read: value: 4, min: 0, max: 3, at /Users/tinguyen/Code/mozilla/mozilla-unified/gfx/2d/Logging.h:749
#01: mozilla::gfx::Log<1, mozilla::gfx::CriticalLogger>::Flush()[/Users/tinguyen/Code/mozilla/mozilla-unified/objdir-full.noindex/dist/FirefoxDebug.app/Contents/MacOS/XUL +0x12f5c02]
#02: void mozilla::gfx::RecordedEvent::ReadPatternData<mozilla::gfx::InlineTranslator::TranslateRecording(char*, unsigned long)::MemReader>(mozilla::gfx::InlineTranslator::TranslateRecording(char*, unsigned long)::MemReader&, mozilla::gfx::PatternStorage&) con[/Users/tinguyen/Code/mozilla/mozilla-unified/objdir-full.noindex/dist/FirefoxDebug.app/Contents/MacOS/XUL +0x131c47c]
#03: bool mozilla::gfx::RecordedEvent::DoWithEvent<mozilla::gfx::InlineTranslator::TranslateRecording(char*, unsigned long)::MemReader>(mozilla::gfx::InlineTranslator::TranslateRecording(char*, unsigned long)::MemReader&, mozilla::gfx::RecordedEvent::EventType[/Users/tinguyen/Code/mozilla/mozilla-unified/objdir-full.noindex/dist/FirefoxDebug.app/Contents/MacOS/XUL +0x130c575]
#04: mozilla::gfx::InlineTranslator::TranslateRecording(char*, unsigned long)[/Users/tinguyen/Code/mozilla/mozilla-unified/objdir-full.noindex/dist/FirefoxDebug.app/Contents/MacOS/XUL +0x1309a1e]
#05: mozilla::gfx::CrossProcessPaint::ResolveInternal(mozilla::dom::IdType<mozilla::dom::BrowserParent>, nsRefPtrHashtable<nsUint64HashKey, mozilla::gfx::SourceSurface>*)[/Users/tinguyen/Code/mozilla/mozilla-unified/objdir-full.noindex/dist/FirefoxDebug.app/Contents/MacOS/XUL +0x177455d]

Likely due to changes in gfx/2d/DrawTargetRecording.cpp

Assignee: nobody → ntim.bugs
Summary: https://leaverou.github.io/conic-gradient/ crashes on debug builds → Gradient crashes on debug builds when scrolling it out of view
Attachment #9129885 - Attachment description: Bug 1619006 - Bump up max value in ReadElementConstrained call in ReadPatternData. → Bug 1619006 - Bump up max value in ReadElementConstrained call in RecordedEvent::ReadPatternData.
Attachment #9129885 - Attachment description: Bug 1619006 - Bump up max value in ReadElementConstrained call in RecordedEvent::ReadPatternData. → Bug 1619006 - Bump up max value in ReadElementConstrained call in ReadPatternData.
Attachment #9129885 - Attachment description: Bug 1619006 - Bump up max value in ReadElementConstrained call in ReadPatternData. → Bug 1619006 - Fix max value in ReadElementConstrained call in RecordedEvent::ReadPatternData.
Pushed by ntim.bugs@gmail.com: https://hg.mozilla.org/integration/autoland/rev/00df17be09f6 Fix max value in ReadElementConstrained call in RecordedEvent::ReadPatternData. r=gfx-reviewers,nical
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: