Bug 1619006 - Fix max value in ReadElementConstrained call in RecordedEvent::ReadPatternData. r=gfx-reviewers,nical

Differential Revision: https://phabricator.services.mozilla.com/D64826