gfx/2d/Types.h
@@ -7,6 +7,7 @@
 #ifndef MOZILLA_GFX_TYPES_H_
 #define MOZILLA_GFX_TYPES_H_
 
+#include "mozilla/DefineEnum.h"  // for MOZ_DEFINE_ENUM_CLASS_WITH_BASE
 #include "mozilla/EndianUtils.h"
 #include "mozilla/EnumeratedRange.h"
 #include "mozilla/MacroArgs.h"  // for MOZ_CONCAT
@@ -410,13 +411,15 @@ enum class SamplingFilter : int8_t {
   SENTINEL  // one past the last valid value
 };
 
-enum class PatternType : int8_t {
+// clang-format off
+MOZ_DEFINE_ENUM_CLASS_WITH_BASE(PatternType, int8_t, (
   COLOR,
   SURFACE,
   LINEAR_GRADIENT,
   RADIAL_GRADIENT,
   CONIC_GRADIENT
-};
+));
+// clang-format on
 
 enum class JoinStyle : int8_t {
   BEVEL,
